tests/spirits/errors/invalid_visibility.dol
// Test: Invalid visibility modifier
// Expected: Should fail - pub(invalid) is not valid

pub(invalid) gen BadVisibility {
    has id: u64
}

docs {
    Test case for invalid visibility modifier.
    Only pub, pub(spirit), and pub(parent) are valid.
}
